# ssh-python

./: .appveyor.yml  .environment.yml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  Changelog.rst  MANIFEST.in  README.rst  _setup_libssh.py  requirements_dev.txt  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
ci/: build-manylinux.sh  build-wheels.sh  build_ssh.sh  install_ssh.sh  osx-wheel.sh  pyenv-wheel.sh
ci/appveyor/: build_krb.bat  build_openssl.bat  build_ssh.bat  build_zlib.bat  copy_openssl_pys.py  fix_version.py  import_test.py  pypi_upload.py  rebuild_openssl_vs2015.cmd
ci/docker/manylinux/: Dockerfile  Dockerfile.2014_x86_64  Dockerfile.aarch64  Dockerfile.aarch64_2_24  Dockerfile.aarch64_2_28  Dockerfile.manylinux_2_24_x86_64  Dockerfile.manylinux_2_28_x86_64  cmake-3.31.3.tar.xz  krb5-1.18.2.tar.xz  krb5-1.18.4.tar.xz  krb5-1.21.1.tar.xz  krb5-1.21.3.tar.xz  libssh-0.10.4.tar.xz  libssh-0.10.5.tar.xz  libssh-0.11.1.tar.xz  libssh-0.9.4.tar.xz  libssh-0.9.5.tar.xz  libssh-0.9.6.tar.xz  openssl-1.0.2p.tar.gz.sha256
ci/integration_tests/: base_case.py  test_channel.py  test_session.py  test_sftp.py
ci/integration_tests/embedded_server/: authorized_keys  openssh.py  sshd_config.tmpl
ci/travis/: build-manylinux.sh  build-wheels.sh  pyenv-wheel.sh
debian/: changelog  control  rules
doc/: api.rst  callbacks.rst  channel.rst  conf.py  connector.rst  event.rst  exceptions.rst  index.rst  installation.rst  key.rst  keytypes.rst  options.rst  scp.rst  session.rst  sftp.rst  sftp_attributes.rst  sftp_handles.rst  sftp_statvfs.rst  utils.rst
examples/: exec.py  keygen.py
libssh/: .gitlab-ci.yml  CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  DefineOptions.cmake  INSTALL  README.CodingStyle  SubmittingPatches  config.h.cmake  libssh-config.cmake.in
libssh/cmake/Modules/: FindGCrypt.cmake
libssh/doc/: CMakeLists.txt  authentication.dox  guided_tour.dox  mainpage.dox
libssh/examples/: CMakeLists.txt  knownhosts.c  libssh_scp.c  ssh_client.c  ssh_server_fork.c  sshd_direct-tcpip.c
libssh/include/libssh/: buffer.h  crypto.h  dh.h  kex.h  libgcrypt.h  libmbedcrypto.h  libssh.h  libsshpp.hpp  misc.h  pki.h  priv.h  session.h  sftp.h  wrapper.h
libssh/src/: CMakeLists.txt  auth.c  base64.c  bignum.c  bind.c  buffer.c  channels.c  channels1.c  client.c  config.c  connect.c  connector.c  curve25519.c  dh-gex.c  dh.c  ecdh.c  ecdh_crypto.c  ecdh_gcrypt.c  ecdh_mbedcrypto.c  error.c  gcrypt_missing.c  getpass.c  gssapi.c  gzip.c  init.c  kdf.c  kex.c  kex1.c  known_hosts.c  knownhosts.c  legacy.c  libcrypto-compat.c  libcrypto-compat.h  libcrypto.c  libgcrypt.c  libmbedcrypto.c  log.c  match.c  mbedcrypto_missing.c  messages.c  (+21 more)
libssh/tests/: CMakeLists.txt  torture.c  torture.h  torture_key.c  torture_key.h  torture_pki.c
libssh/tests/client/: CMakeLists.txt  torture_algorithms.c  torture_auth.c  torture_connect.c  torture_forward.c  torture_knownhosts.c  torture_knownhosts_verify.c  torture_proxycommand.c  torture_rekey.c  torture_request_env.c  torture_scp.c  torture_session.c  torture_sftp_dir.c  torture_sftp_ext.c  torture_sftp_fsync.c  torture_sftp_read.c
libssh/tests/fuzz/: CMakeLists.txt
libssh/tests/pkd/: CMakeLists.txt  pkd_client.h  pkd_daemon.c  pkd_daemon.h  pkd_hello.c  pkd_keyutil.c  pkd_keyutil.h
libssh/tests/server/: CMakeLists.txt
libssh/tests/server/test_server/: CMakeLists.txt
libssh/tests/unittests/: CMakeLists.txt  torture_buffer.c  torture_callbacks.c  torture_channel.c  torture_config.c  torture_crypto.c  torture_init.c  torture_isipaddr.c  torture_keyfiles.c  torture_knownhosts_parsing.c  torture_list.c  torture_misc.c  torture_options.c  torture_pki.c  torture_pki_dsa.c  torture_pki_ecdsa.c  torture_pki_ed25519.c  torture_pki_rsa.c  torture_rand.c  torture_server_x11.c
ssh/: __init__.c  __init__.py  __init__.pyx  _version.py  c_agent.pxd  c_auth.pxd  c_bind.pxd  c_callbacks.pxd  c_channels.pxd  c_crypto.pxd  c_ed25519.pxd  c_gssapi.pxd  c_kex.pxd  c_keys.pxd  c_knownhosts.pxd  c_legacy.pxd  c_messages.pxd  c_misc.pxd  c_options.pxd  c_packet.pxd  c_pki.pxd  c_pki_priv.pxd  c_poll.pxd  c_priv.pxd  c_scp.pxd  c_session.pxd  c_sftp.pxd  c_socket.pxd  c_ssh.pxd  c_ssh2.pxd  c_string.pxd  c_threads.pxd  c_wrapper.pxd  callbacks.c  callbacks.pxd  callbacks.pyx  channel.c  channel.pxd  channel.pyx  connector.c  (+44 more)
tests/: base_case.py  base_test.py  test_channel.py  test_connector.py  test_event.py  test_keys.py  test_keytypes.py  test_session.py  test_sftp.py  unit_test_cert_key-cert.pub
tests/embedded_server/: ca_user_key-cert.pub  openssh.py  sshd_config.tmpl
